Bug 469867 - With Spectacle configured to take no screenshot on launch, command-line args for different modes don't work
Summary: With Spectacle configured to take no screenshot on launch, command-line args ...
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 23.04.1
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2023-05-16 20:17 UTC by Nate Graham
Modified: 2023-10-23 17:12 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 24.02
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nate Graham 2023-05-16 20:17:18 UTC
STEPS TO REPRODUCE
1. Settings window > When launching Spectacle > Do not take screenshot automatically
2. Quit Spectacle
3. Run `spectacle` in a terminal window with any of the flags to take a specific type of screenshot: -f, -m, -a, -u, -t, or -r.

OBSERVED RESULT
Spectacle opens to the "take a new screenshot" window.

EXPECTED RESULT
Spectacle takes the kind of screenshot you asked for.
Comment 1 Bug Janitor Service 2023-10-21 23:40:19 UTC
A possibly relevant merge request was started @ https://invent.kde.org/graphics/spectacle/-/merge_requests/278
Comment 2 Noah Davis 2023-10-23 13:08:21 UTC
Git commit 18200f2811ca09845010eb9184b0a2eff3243fb5 by Noah Davis, on behalf of Tino Lorenz.
Committed on 23/10/2023 at 15:06.
Pushed by ndavis into branch 'master'.

Fix not taking screenshot from cli option

Fix not taking a screenshot when a capture mode is given as cli option
when configured not to take a screenshot on launch.

M  +13   -3    src/SpectacleCore.cpp

https://invent.kde.org/graphics/spectacle/-/commit/18200f2811ca09845010eb9184b0a2eff3243fb5