Fix not taking screenshot from cli option

Fix not taking a screenshot when a capture mode is given as cli option
when configured not to take a screenshot on launch.
BUG: 469867